@@ -121,12 +121,7 @@ BootloaderHandleMessageResponse get_low_level_state(const GetLowLevelState *data
 	response->resistances[0]           = ads1118.cp_pe_resistance;
 	response->resistances[1]           = ads1118.pp_pe_resistance;
 	response->gpio[0]                  = XMC_GPIO_GetInput(EVSE_INPUT_GP_PIN) | (XMC_GPIO_GetInput(EVSE_OUTPUT_GP_PIN) << 1) | (XMC_GPIO_GetInput(EVSE_MOTOR_INPUT_SWITCH_PIN) << 2) | (XMC_GPIO_GetInput(EVSE_RELAY_PIN) << 3) | (XMC_GPIO_GetInput(EVSE_MOTOR_FAULT_PIN) << 4);
-
-	if(evse.charging_time == 0) {
-		response->charging_time        = 0;
-	} else {
-		response->charging_time        = system_timer_get_ms() - evse.charging_time;
-	}
+	response->car_stopped_charging	   = evse.car_stopped_charging;
 	response->uptime                   = system_timer_get_ms();
 	response->time_since_state_change  = response->uptime - iec61851.last_state_change;
 
